--- a/devops.upes.assignment1.brm/pom.xml
+++ b/devops.upes.assignment1.brm/pom.xml
@@ -3,4 +3,27 @@
   <groupId>devops.upes.assignment1</groupId>
   <artifactId>devops.upes.assignment1.brm</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <properties>
+<maven.compiler.source>1.8</maven.compiler.source>
+<maven.compiler.target>1.8</maven.compiler.target>
+</properties>
+<build>
+<plugins>
+<plugin>
+<!--  Build an executable JAR  -->
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-jar-plugin</artifactId>
+<version>3.1.0</version>
+<configuration>
+<archive>
+<manifest>
+<addClasspath>true</addClasspath>
+<classpathPrefix>lib/</classpathPrefix>
+<mainClass>MyCalc.MyCalculator</mainClass>
+</manifest>
+</archive>
+</configuration>
+</plugin>
+</plugins>
+</build>
 </project>
